# anonymous_project

./: .gitignore  LICENSE  README-zh.md  README.md  main.py  pyproject.toml
data/template/en/analysis/: image_analysis.human.jinja2.md  image_analysis.system.md  prompt_analysis.general.system.md  prompt_analysis.human.jinja2.md  prompt_analysis.skill_tree.system.md
data/template/en/generate/: filter_prompt.human.jinja2.md  filter_prompt.system.md  generate_prompt.human.jinja2.md  generate_prompt.system.md
data/template/en/judge/: judge.baseline.system.md  judge.general.system.md  judge.skip_all.system.md  judge.skip_knowledge_hint.system.md  judge.skip_label.system.md  judge.skip_visual_grounding.system.md  judge.user.jinja2.md
data/template/zh/analysis/: image_analysis.human.jinja2.md  image_analysis.system.md  prompt_analysis.general.system.md  prompt_analysis.human.jinja2.md  prompt_analysis.skill_tree.system.md
data/template/zh/generate/: filter_prompt.human.jinja2.md  (+3 more)
example/: taxonomy_tree.json
example/data/: generalized_en.jsonl  generalized_zh.jsonl  skill_tree_en.jsonl  skill_tree_zh.jsonl  test_gt_en.jsonl  test_gt_zh.jsonl  val_gt_en.jsonl  val_gt_zh.jsonl
lib/: types.py
lib/agents/analysis/: image_analysis.py  prompt_analysis.py
lib/agents/generate/: generate_prompt.py
lib/agents/judge/: judge_model_image.py
lib/models/: prompt.py  taxonomy.py
lib/tools/image_search/: base_image_search.py  wikimedia_commons_image_search.py
lib/utils/: agent.py  common.py  datasets.py  google_model_fix.py  image.py  persistence.py  template.py
(+7 files in other folders)
